--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 
-<a href="https://instagram.com/YOUR_INSTAGRAM_ID" class="logo" target="_blank">
+<a href="https://instagram.com/itz_ravii__04" class="logo" target="_blank">
   RAV1
 </a>
 
-<div class="center-text">Tap logo</div>
+<div class="center-text">R C</div>
+  <div id="shayari"></div>
+<script src="script.js"></script>
 
 </body>
 </html>
